# pga-dfs

./: .gitignore  constants.py  interactive.ipynb  john-deere.csv  pyproject.toml
.backups/: backup_buffer.py
data/contest-files/: 3m-late.csv  3m-open.csv  british-open.csv  scottish-open.csv
data/contest-files/.ipynb_checkpoints/: british-open-checkpoint.csv
data/datagolf-raw/: MASTER.pkl  american-express.pkl  arnold-palmer-invitational-presented-by-mastercard.pkl  att-byron-nelson.pkl  att-pebble-beach-pro-am.pkl  barbasol-championship.pkl  barracuda-championship.pkl  charles-schwab-challenge.pkl  corales-puntacana-championship.pkl  farmers-insurance-open.pkl  genesis-invitational.pkl  genesis-scottish-open.pkl  honda-classic.pkl  john-deere-classic.pkl  masters.pkl  mexico-open-at-vidanta.pkl  open-championship.pkl  pga-championship.pkl  puerto-rico-open.pkl  rbc-canadian-open.pkl  rbc-heritage.pkl  sentry-tournament-of-champions.pkl  sony-open-in-hawaii.pkl  the-memorial-tournament-presented-by-workday.pkl  the-players-championship.pkl  travelers-championship.pkl  u.s.-open.pkl  valero-texas-open.pkl  valspar-championship.pkl  wells-fargo-championship.pkl  wm-phoenix-open.pkl
data/pickle-buffer/: strokes-gained.pkl
src/: constants.py  constraints.py  datagolf_api.py  datagolf_sh.ipynb  interactive.ipynb  mem-info.md
src/datagolf/: __init__.py  core.py  driver.py  utils.py
src/dataprep/: __init__.py  core.py
src/fileman/: __init__.py  core.py
src/optimizer/: __init__.py  core.py
src/pga/: __init__.py  core.py
src/picklejar/: __init__.py  core.py
(+13 files in other folders)
