[tool.poetry]
name = "pga-dfs"
version = "0.1.0"
description = ""
authors = ["jackdegen <jdeegs99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandarallel = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
